--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <title>hararecmg</title>
   <meta name="title" content="hararecmg">
   <meta name="description"
-    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí verás mis proyectos como desarrollador y matemático.">
+    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí verás mis trabajos como desarrollador y matemático.">
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <!-- Mobile device icons -->
@@ -31,7 +31,7 @@
   <meta property="og:url" content="https://hararecmg.com/">
   <meta property="og:title" content="hararecmg">
   <meta property="og:description"
-    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de proyectos que he realizado como desarrollador y matemático.">
+    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de trabajos que he realizado como desarrollador y matemático.">
   <meta property="og:image" content="https://pbs.twimg.com/profile_images/1495213324434173952/bkTfOzX7_400x400.jpg">
   <meta property="og:image:width" content="1650">
   <meta property="og:image:height" content="1650">
@@ -40,7 +40,7 @@
   <meta property="twitter:url" content="https://hararecmg.com/">
   <meta property="twitter:title" content="hararecmg">
   <meta property="twitter:description"
-    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de proyectos que he realizado como desarrollador y matemático.">
+    content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de trabajos que he realizado como desarrollador y matemático.">
   <meta property="twitter:image"
     content="https://pbs.twimg.com/profile_images/1495213324434173952/bkTfOzX7_400x400.jpg">
   <meta name="twitter:site" content="@HararecMG">
