--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>hararecmg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="canonical" href="https://hararecmg.com/">
+  <link rel="canonical" href="https://hararecmg.github.io/hararec-website/">
   <link rel="author" type="text/plain" href="./humans.txt">
   <link rel="manifest" href="./manifest.json">
   <!-- Primary Meta Tags -->
@@ -28,7 +28,7 @@
   <meta name="theme-color" content="#8B008B">
   <!-- Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://hararecmg.com/">
+  <meta property="og:url" content="https://hararecmg.github.io/hararec-website/">
   <meta property="og:title" content="hararecmg">
   <meta property="og:description"
     content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de trabajos que he realizado como desarrollador y matemático.">
@@ -37,7 +37,7 @@
   <meta property="og:image:height" content="1650">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://hararecmg.com/">
+  <meta property="twitter:url" content="https://hararecmg.github.io/hararec-website/">
   <meta property="twitter:title" content="hararecmg">
   <meta property="twitter:description"
     content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí encontrarás una selección de trabajos que he realizado como desarrollador y matemático.">
