chore: se agrega meta etiqueta de icono para Safari

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
   <!-- App colors for Windows desktop -->
   <meta name="msapplication-config" content="./assets/icons/browserconfig.xml">
   <meta name="msapplication-TileColor" content="#8B008B">
+  <!-- Icon for safari -->
+  <link rel="mask-icon" href="./assets/icons/safari-pinned-tab.svg" color="#000000">
   <!-- Chrome theme color for Android -->
   <meta name="theme-color" content="#8B008B">
   <!-- Facebook -->
