--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,24 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://hararecmg.github.io/hararec-website/">
-  <link rel="author" type="text/plain" href="./humans.txt">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="author" type="text/plain" href="humans.txt">
+  <link rel="manifest" href="manifest.json">
   <!-- Primary Meta Tags -->
   <title>hararecmg</title>
   <meta name="title" content="hararecmg">
   <meta name="description"
     content="¡Hola! Mi nombre es Hararec M.G y te doy la bienvenida a mi sitio. Aquí verás mis trabajos como desarrollador y matemático.">
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Mobile device icons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
   <!-- App colors for Windows desktop -->
-  <meta name="msapplication-config" content="./assets/icons/browserconfig.xml">
+  <meta name="msapplication-config" content="assets/icons/browserconfig.xml">
   <meta name="msapplication-TileColor" content="#8B008B">
   <!-- Icon for safari -->
-  <link rel="mask-icon" href="./assets/icons/safari-pinned-tab.svg" color="#000000">
+  <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#000000">
   <!-- Chrome theme color for Android -->
   <meta name="theme-color" content="#8B008B">
   <!-- Facebook -->
